--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <input type="text" id="city" class="form-control" />
               </div>
               <div class="form-group">
-                <label for="state">state</label>
+                <label for="state">Country</label>
                 <input type="text" id="state" class="form-control" />
               </div>
             </form>
